# GRAN

./: CMakeLists.txt  LANGUAGE_SYNTAX.md  Makefile  README.md  a.gran  factorial.gran  gran  output.c  output.ll  output.s  runtime.c  test  test.gran  testprog
examples/: hello_world.gran  test.garn
include/: ast.h  ir_generator.h  lexer.h  parser.h
src/: ir_generator.cpp  lexer.cpp  main.cpp  parser.cpp  transpiler.cpp  transpiler.h
tests/: test_lexer.gran
web/: index.html  script.js  style.css
web/backend/: server.js
web/backend/.trash/: README.txt  app.py
